SemesterProject/antlr/ToyParser.py
# Generated from Toy.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ToyParser ( Parser ):

    grammarFileName = "Toy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'='", "'-'", "'+'", 
                     "'('", "')'", "'['", "']'", "','", "'()'", "'*'", "'.'", 
                     "'hasNext'", "'next'", "'printf'", "'){'", "'!'", "'getArg'", 
                     "'=='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'/'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MAIN", "CLASS", "CONST", "TYPE", "ARRAY", "RECORD", 
                      "STRUCT", "VAR", "DIV", "MOD", "AND", "OR", "NOT", 
                      "IF", "THEN", "ELSE", "WHILE", "PROCEDURE", "FUNCTION", 
                      "NEW", "TRUE", "FALSE", "READ", "ITERATOR", "IDENTIFIER", 
                      "INTEGER", "REAL", "NEWLINE", "WS", "QUOTE", "CHARACTER", 
                      "STRING", "COMMENT" ]

    RULE_classStart = 0
    RULE_classHeader = 1
    RULE_classLevelBlock = 2
    RULE_classIdentifier = 3
    RULE_block = 4
    RULE_declarations = 5
    RULE_constantsPart = 6
    RULE_constantDefinitionsList = 7
    RULE_constantDefinition = 8
    RULE_constantIdentifier = 9
    RULE_constant = 10
    RULE_sign = 11
    RULE_typesPart = 12
    RULE_typeDefinitionsList = 13
    RULE_typeDefinition = 14
    RULE_typeIdentifier = 15
    RULE_typeSpecification = 16
    RULE_iteratorType = 17
    RULE_simpleType = 18
    RULE_arrayType = 19
    RULE_arrayDimensionList = 20
    RULE_recordType = 21
    RULE_recordFields = 22
    RULE_variablesPart = 23
    RULE_variableDeclarationsList = 24
    RULE_variableDeclarations = 25
    RULE_variableIdentifierList = 26
    RULE_variableIdentifier = 27
    RULE_routinesPart = 28
    RULE_routineDefinition = 29
    RULE_procedureHead = 30
    RULE_functionHead = 31
    RULE_routineIdentifier = 32
    RULE_parameters = 33
    RULE_parameterDeclarationsList = 34
    RULE_parameterDeclarations = 35
    RULE_parameterIdentifierList = 36
    RULE_parameterIdentifier = 37
    RULE_statement = 38
    RULE_hasNextStatement = 39
    RULE_nextStatement = 40
    RULE_readStatement = 41
    RULE_printfStatement = 42
    RULE_compoundStatement = 43
    RULE_mainProcedure = 44
    RULE_emptyStatement = 45
    RULE_statementList = 46
    RULE_assignmentStatement = 47
    RULE_lhs = 48
    RULE_rhs = 49
    RULE_ifStatement = 50
    RULE_trueStatement = 51
    RULE_falseStatement = 52
    RULE_whileStatement = 53
    RULE_procedureCallStatement = 54
    RULE_procedureName = 55
    RULE_argumentList = 56
    RULE_argument = 57
    RULE_expression = 58
    RULE_simpleExpression = 59
    RULE_term = 60
    RULE_factor = 61
    RULE_getArgCall = 62
    RULE_booleanConstant = 63
    RULE_variable = 64
    RULE_modifier = 65
    RULE_indexList = 66
    RULE_index = 67
    RULE_field = 68
    RULE_functionCall = 69
    RULE_functionName = 70
    RULE_number = 71
    RULE_unsignedNumber = 72
    RULE_integerConstant = 73
    RULE_realConstant = 74
    RULE_characterConstant = 75
    RULE_stringConstant = 76
    RULE_relOp = 77
    RULE_addOp = 78
    RULE_mulOp = 79

    ruleNames =  [ "classStart", "classHeader", "classLevelBlock", "classIdentifier", 
                   "block", "declarations", "constantsPart", "constantDefinitionsList", 
                   "constantDefinition", "constantIdentifier", "constant", 
                   "sign", "typesPart", "typeDefinitionsList", "typeDefinition", 
                   "typeIdentifier", "typeSpecification", "iteratorType", 
                   "simpleType", "arrayType", "arrayDimensionList", "recordType", 
                   "recordFields", "variablesPart", "variableDeclarationsList", 
                   "variableDeclarations", "variableIdentifierList", "variableIdentifier", 
                   "routinesPart", "routineDefinition", "procedureHead", 
                   "functionHead", "routineIdentifier", "parameters", "parameterDeclarationsList", 
                   "parameterDeclarations", "parameterIdentifierList", "parameterIdentifier", 
                   "statement", "hasNextStatement", "nextStatement", "readStatement", 
                   "printfStatement", "compoundStatement", "mainProcedure", 
                   "emptyStatement", "statementList", "assignmentStatement", 
                   "lhs", "rhs", "ifStatement", "trueStatement", "falseStatement", 
                   "whileStatement", "procedureCallStatement", "procedureName", 
                   "argumentList", "argument", "expression", "simpleExpression", 
                   "term", "factor", "getArgCall", "booleanConstant", "variable", 
                   "modifier", "indexList", "index", "field", "functionCall", 
                   "functionName", "number", "unsignedNumber", "integerConstant", 
                   "realConstant", "characterConstant", "stringConstant", 
                   "relOp", "addOp", "mulOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    MAIN=28
    CLASS=29
    CONST=30
    TYPE=31
    ARRAY=32
    RECORD=33
    STRUCT=34
    VAR=35
    DIV=36
    MOD=37
    AND=38
    OR=39
    NOT=40
    IF=41
    THEN=42
    ELSE=43
    WHILE=44
    PROCEDURE=45
    FUNCTION=46
    NEW=47
    TRUE=48
    FALSE=49
    READ=50
    ITERATOR=51
    IDENTIFIER=52
    INTEGER=53
    REAL=54
    NEWLINE=55
    WS=56
    QUOTE=57
    CHARACTER=58
    STRING=59
    COMMENT=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassStartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classHeader(self):
            return self.getTypedRuleContext(ToyParser.ClassHeaderContext,0)


        def classLevelBlock(self):
            return self.getTypedRuleContext(ToyParser.ClassLevelBlockContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_classStart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassStart" ):
                listener.enterClassStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassStart" ):
                listener.exitClassStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassStart" ):
                return visitor.visitClassStart(self)
            else:
                return visitor.visitChildren(self)




    def classStart(self):

        localctx = ToyParser.ClassStartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classStart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.classHeader()
            self.state = 161
            self.match(ToyParser.T__0)
            self.state = 162
            self.classLevelBlock()
            self.state = 163
            self.match(ToyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(ToyParser.CLASS, 0)

        def classIdentifier(self):
            return self.getTypedRuleContext(ToyParser.ClassIdentifierContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_classHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassHeader" ):
                listener.enterClassHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassHeader" ):
                listener.exitClassHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassHeader" ):
                return visitor.visitClassHeader(self)
            else:
                return visitor.visitChildren(self)




    def classHeader(self):

        localctx = ToyParser.ClassHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(ToyParser.CLASS)
            self.state = 166
            self.classIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassLevelBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(ToyParser.DeclarationsContext,0)


        def mainProcedure(self):
            return self.getTypedRuleContext(ToyParser.MainProcedureContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_classLevelBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassLevelBlock" ):
                listener.enterClassLevelBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassLevelBlock" ):
                listener.exitClassLevelBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassLevelBlock" ):
                return visitor.visitClassLevelBlock(self)
            else:
                return visitor.visitChildren(self)




    def classLevelBlock(self):

        localctx = ToyParser.ClassLevelBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classLevelBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.declarations()
            self.state = 169
            self.mainProcedure()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.entry = None

        def IDENTIFIER(self):
            return self.getToken(ToyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ToyParser.RULE_classIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassIdentifier" ):
                listener.enterClassIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassIdentifier" ):
                listener.exitClassIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassIdentifier" ):
                return visitor.visitClassIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def classIdentifier(self):

        localctx = ToyParser.ClassIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(ToyParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(ToyParser.DeclarationsContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(ToyParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ToyParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.declarations()
            self.state = 174
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantsPart(self):
            return self.getTypedRuleContext(ToyParser.ConstantsPartContext,0)


        def typesPart(self):
            return self.getTypedRuleContext(ToyParser.TypesPartContext,0)


        def variablesPart(self):
            return self.getTypedRuleContext(ToyParser.VariablesPartContext,0)


        def routinesPart(self):
            return self.getTypedRuleContext(ToyParser.RoutinesPartContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = ToyParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 176
                self.constantsPart()
                self.state = 177
                self.match(ToyParser.T__2)


            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 181
                self.typesPart()
                self.state = 182
                self.match(ToyParser.T__2)


            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 186
                self.variablesPart()
                self.state = 187
                self.match(ToyParser.T__2)


            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 191
                self.routinesPart()
                self.state = 192
                self.match(ToyParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(ToyParser.CONST, 0)

        def constantDefinitionsList(self):
            return self.getTypedRuleContext(ToyParser.ConstantDefinitionsListContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_constantsPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantsPart" ):
                listener.enterConstantsPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantsPart" ):
                listener.exitConstantsPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantsPart" ):
                return visitor.visitConstantsPart(self)
            else:
                return visitor.visitChildren(self)




    def constantsPart(self):

        localctx = ToyParser.ConstantsPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constantsPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(ToyParser.CONST)
            self.state = 197
            self.constantDefinitionsList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDefinitionsListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyParser.ConstantDefinitionContext)
            else:
                return self.getTypedRuleContext(ToyParser.ConstantDefinitionContext,i)


        def getRuleIndex(self):
            return ToyParser.RULE_constantDefinitionsList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDefinitionsList" ):
                listener.enterConstantDefinitionsList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDefinitionsList" ):
                listener.exitConstantDefinitionsList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDefinitionsList" ):
                return visitor.visitConstantDefinitionsList(self)
            else:
                return visitor.visitChildren(self)




    def constantDefinitionsList(self):

        localctx = ToyParser.ConstantDefinitionsListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constantDefinitionsList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.constantDefinition()
            self.state = 204
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 200
                    self.match(ToyParser.T__2)
                    self.state = 201
                    self.constantDefinition() 
                self.state = 206
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantIdentifier(self):
            return self.getTypedRuleContext(ToyParser.ConstantIdentifierContext,0)


        def constant(self):
            return self.getTypedRuleContext(ToyParser.ConstantContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_constantDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDefinition" ):
                listener.enterConstantDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDefinition" ):
                listener.exitConstantDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDefinition" ):
                return visitor.visitConstantDefinition(self)
            else:
                return visitor.visitChildren(self)




    def constantDefinition(self):

        localctx = ToyParser.ConstantDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constantDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.constantIdentifier()
            self.state = 208
            self.match(ToyParser.T__3)
            self.state = 209
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None
            self.entry = None

        def IDENTIFIER(self):
            return self.getToken(ToyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ToyParser.RULE_constantIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantIdentifier" ):
                listener.enterConstantIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantIdentifier" ):
                listener.exitConstantIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantIdentifier" ):
                return visitor.visitConstantIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def constantIdentifier(self):

        localctx = ToyParser.ConstantIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constantIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(ToyParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None
            self.value = None

        def IDENTIFIER(self):
            return self.getToken(ToyParser.IDENTIFIER, 0)

        def unsignedNumber(self):
            return self.getTypedRuleContext(ToyParser.UnsignedNumberContext,0)


        def sign(self):
            return self.getTypedRuleContext(ToyParser.SignContext,0)


        def characterConstant(self):
            return self.getTypedRuleContext(ToyParser.CharacterConstantContext,0)


        def stringConstant(self):
            return self.getTypedRuleContext(ToyParser.StringConstantContext,0)


        def booleanConstant(self):
            return self.getTypedRuleContext(ToyParser.BooleanConstantContext,0)


        def getRuleIndex(self):
            return ToyParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = ToyParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.state = 223
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 52, 53, 54]:
                self.enterOuterAlt(localctx, 1)
                self.state = 214
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5 or _la==6:
                    self.state = 213
                    self.sign()

